--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "payment.fullname" . }}
+  name: payment
   labels:
     {{- include "payment.labels" . | nindent 4 }}
 spec:
